# serial-monitor

./: .gitignore  LICENSE.md  README.md  pyproject.toml  serial-monitor.service.example
src/: main.py
src/tests/: main_test.py
