[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["Dane Petersen <thegreatsunra@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
