[tool.poetry]
name = "serial-monitor"
version = "1.0.0"
description = ""
authors = ["Dane Petersen <thegreatsunra@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
